feat: [SRM-15004]: Create and register deployment analysis step (#49555)
* feat: [SRM-15004]: Create and register deployment analysis step

* feat: [SRM-15004]: Add test for Filter and variable creators for deployment step

* fix: [SRM-15004]: Fix deployment step, and make sure it runs with adding yaml for the step

* feat: {SRM-15004]: Addressed review comments

* feat: {SRM-15004]: Addressed review comments

* feat: {SRM-15004]: Fix tests

* feat: {SRM-15004]: Fix tests